--- a/assets/styles/components/dark-mode.scss
+++ b/assets/styles/components/dark-mode.scss
@@ -21,4 +21,38 @@
   .accordion__main-btn {
     color: var(--white);
   }
+
+  .input__type,
+  input {
+    background-color: var(--gray-700);
+    color: var(--white);
+    &::placeholder {
+      color: var(--gray-500);
+    }
+  }
+
+  .accordion__content-wrapper {
+    background-color: var(--gray-700);
+  }
+
+  .custom-select__selected {
+    background-color: var(--gray-700);
+  }
+
+  .custom-select__text {
+    color: var(--white);
+  }
+
+  .custom-select__list {
+    background-color: var(--gray-700);
+  }
+
+  .custom-select__item-text {
+    color: var(--white);
+  }
+
+  .tags-input__dropdown-item {
+    background-color: var(--gray-700);
+    color: var(--white);
+  }
 }
